Fix spacing issues in the planner
fixes ADMIN-279

test plan:
  - load the planner
  > expect it to look like the mockup attached to the ticket

Reviewed-on: https://gerrit.instructure.com/142609
QA-Review: Mysti Sadler <mysti@instructure.com>
Tested-by: Jenkins
Product-Review: Mary Jane Anderson <manderson@instructure.com>

--- a/packages/canvas-planner/src/components/CompletedItemsFacade/styles.css
+++ b/packages/canvas-planner/src/components/CompletedItemsFacade/styles.css
@@ -8,11 +8,13 @@
 
 .contentPrimary {
   margin-bottom: var(--bottomMarginPhoneUp);
+  margin-left: var(--gutterWidth);
   box-sizing: border-box;
   min-width: 1px;
 }
 
 .contentSecondary {
+  margin-left: var(--gutterWidth);
   box-sizing: border-box;
   min-width: 1px;
 }
